# pycanha-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  Instrumentor_8hpp_source.html  README.md  RandomGenerators_8hpp_source.html  SparseUtils_8hpp_source.html  annotated.html  annotated_dup.js  callback__registry_8hpp_source.html  callbacks_8hpp_source.html  classes.html  classpycanha_1_1AttributeEntity-members.html  classpycanha_1_1AttributeEntity.html  classpycanha_1_1AttributeEntity__coll__graph.map  classpycanha_1_1AttributeEntity__coll__graph.md5  classpycanha_1_1AttributeEntity__inherit__graph.map  classpycanha_1_1AttributeEntity__inherit__graph.md5  classpycanha_1_1CallbackContext-members.html  classpycanha_1_1CallbackContext.html  classpycanha_1_1CallbackContext__coll__graph.map  classpycanha_1_1CallbackContext__coll__graph.md5  classpycanha_1_1CallbackRegistry-members.html  classpycanha_1_1CallbackRegistry.html  classpycanha_1_1CallbackRegistry__coll__graph.map  classpycanha_1_1CallbackRegistry__coll__graph.md5  classpycanha_1_1ConductiveCouplingEntity-members.html  classpycanha_1_1ConductiveCouplingEntity.html  classpycanha_1_1ConductiveCouplingEntity__coll__graph.map  classpycanha_1_1ConductiveCouplingEntity__coll__graph.md5  classpycanha_1_1ConductiveCouplingEntity__inherit__graph.map  classpycanha_1_1ConductiveCouplingEntity__inherit__graph.md5  classpycanha_1_1ConductiveCouplings-members.html  classpycanha_1_1ConductiveCouplings.html  classpycanha_1_1ConductiveCouplings__coll__graph.map  classpycanha_1_1ConductiveCouplings__coll__graph.md5  classpycanha_1_1Coupling-members.html  classpycanha_1_1Coupling.html  (+787 more)
.conan/profiles/: Linux-gcc13-amd64  macos-clang-arm64  macos-gcc12-arm64  options-all  options-ci  options-coverage  options-doc  options-lib-warns  options-ql  ubuntu-clang16-amd64  ubuntu-clang18-amd64  ubuntu-default-amd64  windows-default-amd64
.github/workflows/: ci.yml  code-checks.yml  coverage.yml  deploy.yml  docs.yml
cmake/: CodeCoverage.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Tools.cmake
docs/: cicd.md  configuring.md  faq.md  index.md  introduction.md  logging.md  mkl-configuration.md  tools.md  workflow.md
examples/: 01_callback.cpp  CMakeLists.txt
pycanha-core/: CMakeLists.txt
pycanha-core/include/pycanha-core/: config.hpp.in  globals.hpp  parameters.hpp  pycanha-core.hpp
pycanha-core/include/pycanha-core/gmm/: callbacks.hpp  geometry.hpp  geometrymodel.hpp  geometryutils.hpp  gmm.hpp  id.hpp  ids.hpp  materials.hpp  primitives.hpp  thermalmesh.hpp  transformations.hpp  triangulation.hpp  trimesh.hpp
pycanha-core/include/pycanha-core/gmm/primitives/: cone.hpp  cube.hpp  cylinder.hpp  disc.hpp  paraboloid.hpp  primitive.hpp  quadrilateral.hpp  rectangle.hpp  sphere.hpp  triangle.hpp
pycanha-core/include/pycanha-core/io/: esatan.hpp
pycanha-core/include/pycanha-core/parameters/: entity.hpp  formula.hpp  formulas.hpp  parameters.hpp  variable.hpp
pycanha-core/include/pycanha-core/solvers/: callback_registry.hpp  solver.hpp  solver_output_config.hpp  solver_registry.hpp  solvers.hpp  ss.hpp  sslu.hpp  ts.hpp  tscn.hpp  tscnrl.hpp  tscnrlds.hpp  tscnrlds_jacobian.hpp
pycanha-core/include/pycanha-core/thermaldata/: data_model.hpp  data_model_store.hpp  data_table_store.hpp  dense_matrix_time_series.hpp  dense_time_series.hpp  interpolation_utils.hpp  lookup_table.hpp  sparse_time_series.hpp  thermaldata.hpp
pycanha-core/include/pycanha-core/tmm/: conductivecouplings.hpp  coupling.hpp  couplingmatrices.hpp  couplings.hpp  literalstring.hpp  node.hpp  nodes.hpp  radiativecouplings.hpp  thermalmathematicalmodel.hpp  thermalmodel.hpp  thermalnetwork.hpp
pycanha-core/include/pycanha-core/utils/: Instrumentor.hpp  RandomGenerators.hpp  SparseUtils.hpp  eigenutils.hpp  logger.hpp  package_info.hpp  profiling.hpp
pycanha-core/legacy/gmm/: callbacks.hpp  geometrymodel.hpp  geometryutils.hpp  gmm.hpp  id.hpp  materials.hpp  thermalmesh.hpp
pycanha-core/src/: triangulation.cpp
pycanha-core/src/gmm/: geometrymodel.cpp
pycanha-core/src/gmm/primitives/: cone.cpp  cube.cpp  cylinder.cpp  detail.hpp  disc.cpp  paraboloid.cpp  quadrilateral.cpp  rectangle.cpp  sphere.cpp  triangle.cpp
pycanha-core/src/io/: esatan.cpp
pycanha-core/src/parameters/: formula.cpp  formulas.cpp  parameters.cpp  variable.cpp
pycanha-core/src/solvers/: callback_registry.cpp  solver.cpp  solver_registry.cpp  ss.cpp  sslu.cpp  ts.cpp  tscn.cpp  tscnrl.cpp  tscnrlds.cpp  tscnrlds_jacobian.cpp
pycanha-core/src/thermaldata/: data_model.cpp  dense_matrix_time_series.cpp  dense_time_series.cpp  lookup_table.cpp  sparse_time_series.cpp
pycanha-core/src/tmm/: conductivecouplings.cpp  coupling.cpp  couplingmatrices.cpp  couplings.cpp  literalstring.cpp  node.cpp  nodes.cpp  radiativecouplings.cpp  thermalmathematicalmodel.cpp  thermalmodel.cpp  thermalnetwork.cpp
pycanha-core/src/utils/: SparseUtils.cpp  logger.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+40 more)
test/: CMakeLists.txt  lib_info_test.cpp  lsan_suppressions.cpp  mytest1.cpp  mytest2.cpp  test_parameters.cpp
test/api/: test_callbacks.cpp  test_formulas.cpp  test_overview.cpp  test_parameters.cpp  test_solvers.cpp  test_thermal_network.cpp  test_thermaldata.cpp
test/dependencies/: test_conan_dependencies.cpp
test/gmm/: test_geometry.cpp  test_geometrymodel.cpp  test_geometryutils.cpp  test_primitives.cpp  test_transformations.cpp  test_trimesh.cpp
test/parameters/: test_formula.cpp  test_smart_formula.cpp  test_variable.cpp
test/solvers/: test_sslu.cpp  test_tscnrlds.cpp  (+1 more)
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
(+50 files in other folders)
